--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,101 +1,118 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   /* overflow-x: hidden; */
-  
+
 }
+
 /* font-family: 'Poppins', sans-serif; */
 body {
   overflow-x: hidden;
-  
 }
-.navbar{
+
+.navbar {
   font-family: 'Poppins', sans-serif;
   text-transform: uppercase;
   box-shadow: 0 8px 6px -6px gray;
 
 
 }
+
 .active{
   border-bottom: 2px solid black;
 }
-.navbar-brand{
-    letter-spacing: 2px;
-}
-.footer{
-    color: white;
-    background: linear-gradient(90deg, rgb(77, 76, 78) 0%, rgba(45,33,33,1) 50%, rgba(10,8,5,1) 100%);
 
-}
-.footer a{
-    text-decoration: none;
-    color: white;
-padding: 4px;
-}
-.footer a:hover{
-    border-bottom: 2px solid rgb(136, 136, 119);
-    color: wheat;
+.navbar-brand {
+  letter-spacing: 2px;
 }
 
-.errorPage a{
-    text-decoration: none;
-    color: black;
-    border: 2px solid black;
+.footer {
+  color: white;
+  background: linear-gradient(90deg, rgb(77, 76, 78) 0%, rgba(45, 33, 33, 1) 50%, rgba(10, 8, 5, 1) 100%);
+
 }
 
-.errorPage a:hover{
-    color:white;
-    background-color: black;
+.footer a {
+  text-decoration: none;
+  color: white;
+  padding: 4px;
+}
+
+.footer a:hover {
+  border-bottom: 2px solid rgb(136, 136, 119);
+  color: wheat;
+}
+
+.errorPage a {
+  text-decoration: none;
+  color: black;
+  border: 2px solid black;
+}
+
+.errorPage a:hover {
+  color: white;
+  background-color: black;
 }
 
 /* -----------------------------------------Register------------------------------ */
-.register{
+.register {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 90vh;
-  background: url(cart2.jpg) ;
+  background: url(cart2.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  
+  background-position: center;
+
 }
-.form{
-    background-color: rgb(17, 16, 17,0.7);
-    color: wheat;
-    /* border: 2px solid black; */
+
+.form {
+  background-color: rgb(17, 16, 17, 0.7);
+  color: wheat;
+  /* border: 2px solid black; */
 }
-.form input{
-  
+
+.form input {
+
   background-color: transparent;
-border-radius: 0 !important;
+  border-radius: 0 !important;
   color: rgb(241, 240, 236) !important;
   outline: none !important;
   border: 0;
   border-bottom: 2px solid wheat !important;
 }
 
-.form input[type="email"]::placeholder{
-  color: wheat; /* Change the placeholder text color to red */
+.form input[type="email"]::placeholder {
+  color: wheat;
+  /* Change the placeholder text color to red */
   outline: none !important;
   border: 0 !important;
-  
+
 }
+
 .form input[type="password"]::placeholder {
-  color: wheat; /* Change the placeholder text color to red */
+  color: wheat;
+  /* Change the placeholder text color to red */
   outline: none !important;
   border: 0 !important;
 }
+
 .form input[type="text"]::placeholder {
-  color: wheat; /* Change the placeholder text color to red */
+  color: wheat;
+  /* Change the placeholder text color to red */
   outline: none !important;
   border: 0 !important;
 }
+
 .form input[type="tel"]::placeholder {
-  color: wheat; /* Change the placeholder text color to red */
+  color: wheat;
+  /* Change the placeholder text color to red */
   outline: none !important;
   border: 0 !important;
 }
@@ -105,7 +122,7 @@ border-radius: 0 !important;
 
 /* Modify the focus outline */
 .form-control:focus {
-  box-shadow: none; 
+  box-shadow: none;
 }
 
 
@@ -115,15 +132,155 @@ border-radius: 0 !important;
 .form input[type="password"]:focus,
 .form input[type="text"]:focus,
 .form input[type="tel"]:focus {
-  outline: none !important; /* Change the outline color to blue when focused */
+  outline: none !important;
+  /* Change the outline color to blue when focused */
   /* You can also modify other properties like background-color, box-shadow, etc. */
   background-color: transparent !important;
 
 }
 
-.form button{
+.form button {
   background-color: wheat;
   color: black;
   border: 2px solid black;
 }
 
+.product-link {
+  text-decoration: none;
+}
+
+.search-bar {
+  position: relative;
+  display: inline-block;
+}
+
+.search-bar input {
+  border: 2px solid black;
+}
+
+input[type="text"]:focus {
+  outline: none !important;
+  /* Change the outline color to blue when focused */
+  /* You can also modify other properties like background-color, box-shadow, etc. */
+  background-color: transparent !important;
+}
+
+input[type="text"]::placeholder {
+  /* Change the placeholder text color to red */
+  outline: none !important;
+  border: 0 !important;
+}
+
+input:focus {
+  box-shadow: none;
+}
+
+.searchIcon {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-250%);
+  pointer-events: none;
+}
+
+.homePage {
+  overflow-x: hidden;
+  background-color: rgb(249, 253, 253);
+}
+.adminProductPage{
+  overflow-x: hidden;
+  background-color: rgb(247, 247, 238);
+}
+
+.contact {
+    background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; 
+}
+.product-details{
+  background-color: rgb(249, 249, 243);
+
+}
+
+
+.social {
+  margin-top: 8% !important;
+  margin-left:29%  !important;
+  color: white;
+}
+.social a.text-decoration-none {
+  text-decoration: none;
+  color: inherit;
+}
+.social a{
+  display: inline-block;
+  margin: 0 10px;
+  transition: transform 0.6s;
+}
+.social a:hover{
+  color:rgb(227, 167, 127);
+  transform: translateY(-10px);
+}
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+.social-link {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #666;
+  border-radius: 50%;
+  transition: all 0.3s;
+  font-size: 0.9rem;
+}
+
+.social-link:hover,
+.social-link:focus {
+  background: #ddd;
+  text-decoration: none;
+  color: #555;
+}
+
+.Carousel{
+  /* border-top: 1px solid black; */
+}
+
+.privacy{
+  background-color: rgb(238, 246, 250);
+}
+.pc{
+  background-color: rgb(248, 248, 250);
+}
+
+.contact-container {
+  position: relative;
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.overlay {
+  position: relative;
+  z-index: 1;
+}
+
+.card:hover {
+  transform: scale(1.03);
+  transition: transform 0.3s ease-in-out;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+.cartDetails{
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  box-sizing: content-box;
+}
